# nixpkgs-index

./: CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  nixpkgs-index.cabal
app/: Cli.hs  Main.hs
src/: Path.hs
src/Control/Effect/: Http.hs  PooledConc.hs
src/Distribution/Nixpkgs/: Files.hs  Hydra.hs  LibraryIndexer.hs  NixEnv.hs  Packages.hs
